@@ -92,4 +92,37 @@ export PKG_CONFIG_PATH=$PKG_CONFIG_PATH:/opt/frysk/lib/pkgconfig
 PKG_CHECK_MODULES(GTK, gtk+-2.0 >= 2.7.0)
 PKG_CHECK_MODULES(GLIB_JAVA, glib-java >= 0.2)
 
+# Check for the cdtparser jar and so in the places where we expect it to be.
+# We currently look in /opt/frysk/lib[64] first because that's what we
+# want to use by default, later when the FC eclipse-cdt can be natively
+# compiled and work correctly we can remove these.
+AC_MSG_CHECKING([for  cdtparser.jar.so])
+AC_GET_LIB_LINE( [libcdtparser.jar.so], [  /opt/frysk/lib , /opt/frysk/lib64,\
+ /usr/lib/eclipse/plugins/org.eclipse.cdt.core_3.0.0 ,\
+ /usr/lib64/eclipse/plugins/org.eclipse.cdt.core_3.0.0] ,
+				  [CDTPARSER_LIBS])
+
+if [[ "x$CDTPARSER_LIBS" = "xNO" ]]; then
+		AC_MSG_ERROR( Could not locate libcdtparser.jar.so)
+else	
+	AC_MSG_RESULT([$CDTPARSER_LIBS])
+	AC_SUBST([CDTPARSER_LIBS])
+fi
+
+
+AC_MSG_CHECKING([for  cdtparser.jar])
+AC_FIND_FILE( [cdtparser.jar], 
+ 	[ /opt/frysk/share/java/ , \
+/usr/share/eclipse/plugins/org.eclipse.cdt.core_3.0.0/],
+	 CDTPARSER_JAR)
+
+if [[ "x$CDTPARSER_JAR" = "xNO" ]]; then
+	AC_MSG_ERROR( Could not locate cdtparser.jar)
+else
+	# Append file name to path because AC_FIND_FILE only returns path
+	CDTPARSER_JAR="${CDTPARSER_JAR}cdtparser.jar"
+	AC_MSG_RESULT([$CDTPARSER_JAR])
+	AC_SUBST([CDTPARSER_JAR])
+fi
+
 AC_OUTPUT
