@@ -1,3 +1,9 @@
+2005-11-04  Adam Jocksch  <ajocksch@redhat.com>
+
+	* Makefile.am: Added test for cdtparserversion.
+	* cdtparserversion/CDTParserTest.java: Added.
+	* cdtparserversion/main.cpp: Added (test input for cdtparserversion).
+
 2005-10-22  Andrew Cagney  <cagney@redhat.com>
 
 	* Makefile.am: Add copyright.
